--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<img id="arrow" src="https://pixabay.com/static/uploads/photo/2015/08/27/10/38/road-sign-910022__340.png"></img>
 
 <script type="text/javascript" src="random.js"></script>
 </body>
