updating/fixing files to add for final upload

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 
-<img id="arrow" src="https://pixabay.com/static/uploads/photo/2015/08/27/10/38/road-sign-910022__340.png"></img>
+<h4>CLICK ANYWHERE ON PAGE TO BEGIN ANIMATION & CLICK ON ARROW TO CHANGE DIRECTIONS</h4>
+
+<div id = "containz"></div>
 
 <script type="text/javascript" src="random.js"></script>
 </body>
 </html>
+
